--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -63,15 +63,10 @@
 
          Must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLevels">
-        <item>50</item>
-        <item>100</item>
-        <item>180</item>
-        <item>300</item>
-        <item>500</item>
-        <item>800</item>
-        <item>1200</item>
+        <item>200</item>
+        <item>400</item>
+        <item>1000</item>
         <item>3000</item>
-        <item>5000</item>
     </integer-array>
 
     <!-- Array of output values for LCD backlight corresponding to the LUX values
@@ -79,16 +74,11 @@
          than the size of the config_autoBrightnessLevels array.
          This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLcdBacklightValues">
-        <item>20</item>
-        <item>45</item>
+        <item>35</item>
+        <item>55</item>
         <item>70</item>
-        <item>95</item>
-        <item>120</item>
-        <item>150</item>
-        <item>175</item>
-        <item>200</item>
-        <item>225</item>
-        <item>255</item>
+        <item>90</item>
+        <item>210</item>
     </integer-array>
 
     <!-- Array of output values for button backlight corresponding to the LUX values
@@ -131,7 +121,7 @@
 
     <!-- Boolean indicating if current platform supports quick switch-on/off of
          Bluetooth Module -->
-    <bool name="config_bluetooth_adapter_quick_switch">true</bool>
+    <bool name="config_bluetooth_adapter_quick_switch">false</bool>
 
     <string name="config_legacyUmsLunFile">/sys/devices/platform/msm_hsusb/gadget/lun0/file</string>
 
